app/js/grammar/flashdown.js
module.exports = (function(){
  /*
   * Generated by PEG.js 0.7.0.
   *
   * http://pegjs.majda.cz/
   */
  
  function quote(s) {
    /*
     * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
     * string literal except for the closing quote character, backslash,
     * carriage return, line separator, paragraph separator, and line feed.
     * Any character may appear in the form of an escape sequence.
     *
     * For portability, we also escape escape all control and non-ASCII
     * characters. Note that "\0" and "\v" escape sequences are not used
     * because JSHint does not like the first and IE the second.
     */
     return '"' + s
      .replace(/\\/g, '\\\\')  // backslash
      .replace(/"/g, '\\"')    // closing quote character
      .replace(/\x08/g, '\\b') // backspace
      .replace(/\t/g, '\\t')   // horizontal tab
      .replace(/\n/g, '\\n')   // line feed
      .replace(/\f/g, '\\f')   // form feed
      .replace(/\r/g, '\\r')   // carriage return
      .replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
      + '"';
  }
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "start": parse_start,
        "headerElem": parse_headerElem,
        "contentElements": parse_contentElements,
        "contentElement": parse_contentElement,
        "itemStart": parse_itemStart,
        "questionItemStart": parse_questionItemStart,
        "answerItemStart": parse_answerItemStart,
        "commentItemStart": parse_commentItemStart,
        "questionItem": parse_questionItem,
        "answerItem": parse_answerItem,
        "commentItem": parse_commentItem,
        "referenceItem": parse_referenceItem,
        "paragraphElem": parse_paragraphElem,
        "paragraphSpan": parse_paragraphSpan,
        "italicSpan": parse_italicSpan,
        "asteriskSpan": parse_asteriskSpan,
        "asteriskSpanSpan": parse_asteriskSpanSpan,
        "underscoreSpan": parse_underscoreSpan,
        "underscoreSpanSpan": parse_underscoreSpanSpan,
        "doubleAsteriskSpan": parse_doubleAsteriskSpan,
        "doubleAsteriskSpanSpan": parse_doubleAsteriskSpanSpan,
        "linkSpan": parse_linkSpan,
        "inlineLinkSpan": parse_inlineLinkSpan,
        "refLinkSpan": parse_refLinkSpan,
        "autoLinkSpan": parse_autoLinkSpan,
        "linkSpanSpan": parse_linkSpanSpan,
        "titleQuoteSpan": parse_titleQuoteSpan,
        "titleSpan": parse_titleSpan,
        "titleSpanNewLineChar": parse_titleSpanNewLineChar,
        "imgSpan": parse_imgSpan,
        "inlineImgSpan": parse_inlineImgSpan,
        "refImgSpan": parse_refImgSpan,
        "imgSpanSpan": parse_imgSpanSpan,
        "paragraphBreak": parse_paragraphBreak,
        "spacedLiteral": parse_spacedLiteral,
        "escapedLiteral": parse_escapedLiteral,
        "hardWrapChar": parse_hardWrapChar,
        "lineBreakSpan": parse_lineBreakSpan,
        "n": parse_n,
        "whitespace": parse_whitespace,
        "w": parse_w,
        "space": parse_space,
        "s": parse_s,
        "FailMatch": parse_FailMatch
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "start";
      }
      
      var pos = 0;
      var reportFailures = 0;
      var rightmostFailuresPos = 0;
      var rightmostFailuresExpected = [];
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        var escapeChar;
        var length;
        
        if (charCode <= 0xFF) {
          escapeChar = 'x';
          length = 2;
        } else {
          escapeChar = 'u';
          length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function matchFailed(failure) {
        if (pos < rightmostFailuresPos) {
          return;
        }
        
        if (pos > rightmostFailuresPos) {
          rightmostFailuresPos = pos;
          rightmostFailuresExpected = [];
        }
        
        rightmostFailuresExpected.push(failure);
      }
      
      function parse_start() {
        var result0, result1;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_headerElem();
        result0 = result0 !== null ? result0 : "";
        if (result0 !== null) {
          result1 = parse_contentElements();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, header, content) {
        			return {
        				header: header,
        				content: content
        			};
        		})(pos0, result0[0], result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_headerElem() {
        var result0;
        var pos0;
        
        pos0 = pos;
        if (/^(?!)/.test(input.charAt(pos))) {
          result0 = input.charAt(pos);
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("[]");
          }
        }
        if (result0 !== null) {
          result0 = (function(offset) {
        			return {
        				author: '',
        				title: '',
        				date: '',
        				tags: [],
        				summary: ''
        			};
        		})(pos0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_contentElements() {
        var result0, result1;
        var pos0;
        
        pos0 = pos;
        result0 = [];
        result1 = parse_contentElement();
        while (result1 !== null) {
          result0.push(result1);
          result1 = parse_contentElement();
        }
        if (result0 !== null) {
          result0 = (function(offset, elem) { return elem; })(pos0, result0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_contentElement() {
        var result0;
        
        result0 = parse_questionItem();
        if (result0 === null) {
          result0 = parse_answerItem();
          if (result0 === null) {
            result0 = parse_commentItem();
            if (result0 === null) {
              result0 = parse_referenceItem();
            }
          }
        }
        return result0;
      }
      
      function parse_itemStart() {
        var result0;
        
        result0 = parse_questionItemStart();
        if (result0 === null) {
          result0 = parse_answerItemStart();
          if (result0 === null) {
            result0 = parse_commentItemStart();
            if (result0 === null) {
              result0 = parse_referenceItem();
            }
          }
        }
        return result0;
      }
      
      function parse_questionItemStart() {
        var result0, result1, result2;
        var pos0;
        
        pos0 = pos;
        result0 = parse_whitespace();
        if (result0 !== null) {
          if (input.charCodeAt(pos) === 42) {
            result1 = "*";
            pos++;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"*\"");
            }
          }
          if (result1 !== null) {
            result2 = parse_s();
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos0;
            }
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        return result0;
      }
      
      function parse_answerItemStart() {
        var result0, result1, result2;
        var pos0;
        
        pos0 = pos;
        result0 = parse_whitespace();
        if (result0 !== null) {
          if (input.charCodeAt(pos) === 45) {
            result1 = "-";
            pos++;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"-\"");
            }
          }
          if (result1 !== null) {
            result2 = parse_s();
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos0;
            }
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        return result0;
      }
      
      function parse_commentItemStart() {
        var result0, result1, result2;
        var pos0;
        
        pos0 = pos;
        result0 = parse_whitespace();
        if (result0 !== null) {
          if (input.charCodeAt(pos) === 43) {
            result1 = "+";
            pos++;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"+\"");
            }
          }
          if (result1 !== null) {
            result2 = parse_s();
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos0;
            }
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        return result0;
      }
      
      function parse_questionItem() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_questionItemStart();
        if (result0 !== null) {
          result1 = parse_space();
          if (result1 !== null) {
            result2 = [];
            result3 = parse_paragraphElem();
            while (result3 !== null) {
              result2.push(result3);
              result3 = parse_paragraphElem();
            }
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, p) {
        			return {
        				type: 'question',
        				paragraphs: p
        			};
        		})(pos0, result0[2]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_answerItem() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_answerItemStart();
        if (result0 !== null) {
          result1 = parse_space();
          if (result1 !== null) {
            result2 = [];
            result3 = parse_paragraphElem();
            while (result3 !== null) {
              result2.push(result3);
              result3 = parse_paragraphElem();
            }
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, p) {
        			return {
        				type: 'answer',
        				paragraphs: p
        			};
        		})(pos0, result0[2]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_commentItem() {
        var result0, result1, result2, result3;
        var pos0, pos1, pos2, pos3, pos4, pos5;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_commentItemStart();
        if (result0 !== null) {
          result1 = [];
          pos2 = pos;
          pos3 = pos;
          pos4 = pos;
          reportFailures++;
          pos5 = pos;
          result2 = parse_n();
          if (result2 !== null) {
            result3 = parse_itemStart();
            if (result3 !== null) {
              result2 = [result2, result3];
            } else {
              result2 = null;
              pos = pos5;
            }
          } else {
            result2 = null;
            pos = pos5;
          }
          reportFailures--;
          if (result2 === null) {
            result2 = "";
          } else {
            result2 = null;
            pos = pos4;
          }
          if (result2 !== null) {
            if (input.length > pos) {
              result3 = input.charAt(pos);
              pos++;
            } else {
              result3 = null;
              if (reportFailures === 0) {
                matchFailed("any character");
              }
            }
            if (result3 !== null) {
              result2 = [result2, result3];
            } else {
              result2 = null;
              pos = pos3;
            }
          } else {
            result2 = null;
            pos = pos3;
          }
          if (result2 !== null) {
            result2 = (function(offset, s) { return s; })(pos2, result2[1]);
          }
          if (result2 === null) {
            pos = pos2;
          }
          while (result2 !== null) {
            result1.push(result2);
            pos2 = pos;
            pos3 = pos;
            pos4 = pos;
            reportFailures++;
            pos5 = pos;
            result2 = parse_n();
            if (result2 !== null) {
              result3 = parse_itemStart();
              if (result3 !== null) {
                result2 = [result2, result3];
              } else {
                result2 = null;
                pos = pos5;
              }
            } else {
              result2 = null;
              pos = pos5;
            }
            reportFailures--;
            if (result2 === null) {
              result2 = "";
            } else {
              result2 = null;
              pos = pos4;
            }
            if (result2 !== null) {
              if (input.length > pos) {
                result3 = input.charAt(pos);
                pos++;
              } else {
                result3 = null;
                if (reportFailures === 0) {
                  matchFailed("any character");
                }
              }
              if (result3 !== null) {
                result2 = [result2, result3];
              } else {
                result2 = null;
                pos = pos3;
              }
            } else {
              result2 = null;
              pos = pos3;
            }
            if (result2 !== null) {
              result2 = (function(offset, s) { return s; })(pos2, result2[1]);
            }
            if (result2 === null) {
              pos = pos2;
            }
          }
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset) {
        			return {
        				type: 'comment'
        			};
        		})(pos0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_referenceItem() {
        var result0, result1, result2, result3, result4, result5, result6, result7, result8, result9;
        var pos0, pos1, pos2, pos3;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_whitespace();
        if (result0 !== null) {
          if (input.charCodeAt(pos) === 91) {
            result1 = "[";
            pos++;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"[\"");
            }
          }
          if (result1 !== null) {
            if (/^[^\n\r\]]/.test(input.charAt(pos))) {
              result3 = input.charAt(pos);
              pos++;
            } else {
              result3 = null;
              if (reportFailures === 0) {
                matchFailed("[^\\n\\r\\]]");
              }
            }
            if (result3 !== null) {
              result2 = [];
              while (result3 !== null) {
                result2.push(result3);
                if (/^[^\n\r\]]/.test(input.charAt(pos))) {
                  result3 = input.charAt(pos);
                  pos++;
                } else {
                  result3 = null;
                  if (reportFailures === 0) {
                    matchFailed("[^\\n\\r\\]]");
                  }
                }
              }
            } else {
              result2 = null;
            }
            if (result2 !== null) {
              if (input.substr(pos, 2) === "]:") {
                result3 = "]:";
                pos += 2;
              } else {
                result3 = null;
                if (reportFailures === 0) {
                  matchFailed("\"]:\"");
                }
              }
              if (result3 !== null) {
                result4 = parse_space();
                if (result4 !== null) {
                  pos2 = pos;
                  if (/^[^\n\r \t]/.test(input.charAt(pos))) {
                    result6 = input.charAt(pos);
                    pos++;
                  } else {
                    result6 = null;
                    if (reportFailures === 0) {
                      matchFailed("[^\\n\\r \\t]");
                    }
                  }
                  if (result6 !== null) {
                    result5 = [];
                    while (result6 !== null) {
                      result5.push(result6);
                      if (/^[^\n\r \t]/.test(input.charAt(pos))) {
                        result6 = input.charAt(pos);
                        pos++;
                      } else {
                        result6 = null;
                        if (reportFailures === 0) {
                          matchFailed("[^\\n\\r \\t]");
                        }
                      }
                    }
                  } else {
                    result5 = null;
                  }
                  if (result5 !== null) {
                    result5 = (function(offset, u) { return u.join(''); })(pos2, result5);
                  }
                  if (result5 === null) {
                    pos = pos2;
                  }
                  if (result5 !== null) {
                    pos2 = pos;
                    pos3 = pos;
                    result7 = parse_s();
                    if (result7 !== null) {
                      result6 = [];
                      while (result7 !== null) {
                        result6.push(result7);
                        result7 = parse_s();
                      }
                    } else {
                      result6 = null;
                    }
                    if (result6 !== null) {
                      result7 = parse_n();
                      result7 = result7 !== null ? result7 : "";
                      if (result7 !== null) {
                        result8 = parse_space();
                        if (result8 !== null) {
                          result9 = parse_titleSpan();
                          if (result9 !== null) {
                            result6 = [result6, result7, result8, result9];
                          } else {
                            result6 = null;
                            pos = pos3;
                          }
                        } else {
                          result6 = null;
                          pos = pos3;
                        }
                      } else {
                        result6 = null;
                        pos = pos3;
                      }
                    } else {
                      result6 = null;
                      pos = pos3;
                    }
                    if (result6 !== null) {
                      result6 = (function(offset, t) { return t; })(pos2, result6[3]);
                    }
                    if (result6 === null) {
                      pos = pos2;
                    }
                    result6 = result6 !== null ? result6 : "";
                    if (result6 !== null) {
                      result7 = parse_space();
                      if (result7 !== null) {
                        result0 = [result0, result1, result2, result3, result4, result5, result6, result7];
                      } else {
                        result0 = null;
                        pos = pos1;
                      }
                    } else {
                      result0 = null;
                      pos = pos1;
                    }
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, id, url, title) {
        			return {
        				type: 'ref',
        				id: id.join(''),
        				url: url,
        				title: title
        			};
        		})(pos0, result0[2], result0[5], result0[6]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_paragraphElem() {
        var result0, result1, result2, result3;
        var pos0, pos1, pos2, pos3;
        
        pos0 = pos;
        pos1 = pos;
        pos2 = pos;
        reportFailures++;
        pos3 = pos;
        result0 = parse_n();
        if (result0 !== null) {
          result1 = parse_itemStart();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos3;
          }
        } else {
          result0 = null;
          pos = pos3;
        }
        reportFailures--;
        if (result0 === null) {
          result0 = "";
        } else {
          result0 = null;
          pos = pos2;
        }
        if (result0 !== null) {
          result1 = parse_whitespace();
          if (result1 !== null) {
            result3 = parse_paragraphSpan();
            if (result3 !== null) {
              result2 = [];
              while (result3 !== null) {
                result2.push(result3);
                result3 = parse_paragraphSpan();
              }
            } else {
              result2 = null;
            }
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, spans) {
        			return {
        				spans: condenseSpans(spans)
        			};
        		})(pos0, result0[2]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_paragraphSpan() {
        var result0, result1, result2;
        var pos0, pos1, pos2, pos3;
        
        result0 = parse_italicSpan();
        if (result0 === null) {
          result0 = parse_doubleAsteriskSpan();
          if (result0 === null) {
            result0 = parse_linkSpan();
            if (result0 === null) {
              result0 = parse_imgSpan();
              if (result0 === null) {
                pos0 = pos;
                pos1 = pos;
                pos2 = pos;
                reportFailures++;
                result0 = parse_paragraphBreak();
                reportFailures--;
                if (result0 === null) {
                  result0 = "";
                } else {
                  result0 = null;
                  pos = pos2;
                }
                if (result0 !== null) {
                  pos2 = pos;
                  reportFailures++;
                  pos3 = pos;
                  result1 = parse_n();
                  if (result1 !== null) {
                    result2 = parse_itemStart();
                    if (result2 !== null) {
                      result1 = [result1, result2];
                    } else {
                      result1 = null;
                      pos = pos3;
                    }
                  } else {
                    result1 = null;
                    pos = pos3;
                  }
                  reportFailures--;
                  if (result1 === null) {
                    result1 = "";
                  } else {
                    result1 = null;
                    pos = pos2;
                  }
                  if (result1 !== null) {
                    result2 = parse_lineBreakSpan();
                    if (result2 === null) {
                      pos2 = pos;
                      result2 = parse_hardWrapChar();
                      if (result2 === null) {
                        if (input.length > pos) {
                          result2 = input.charAt(pos);
                          pos++;
                        } else {
                          result2 = null;
                          if (reportFailures === 0) {
                            matchFailed("any character");
                          }
                        }
                      }
                      if (result2 !== null) {
                        result2 = (function(offset, s) { return s; })(pos2, result2);
                      }
                      if (result2 === null) {
                        pos = pos2;
                      }
                    }
                    if (result2 !== null) {
                      result0 = [result0, result1, result2];
                    } else {
                      result0 = null;
                      pos = pos1;
                    }
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                } else {
                  result0 = null;
                  pos = pos1;
                }
                if (result0 !== null) {
                  result0 = (function(offset, s) { return s; })(pos0, result0[2]);
                }
                if (result0 === null) {
                  pos = pos0;
                }
              }
            }
          }
        }
        return result0;
      }
      
      function parse_italicSpan() {
        var result0;
        
        result0 = parse_asteriskSpan();
        if (result0 === null) {
          result0 = parse_underscoreSpan();
        }
        return result0;
      }
      
      function parse_asteriskSpan() {
        var result0, result1, result2, result3, result4, result5;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        result0 = (function(offset) { return tryPushSpanStack('em'); })(pos) ? "" : null;
        if (result0 !== null) {
          if (input.charCodeAt(pos) === 42) {
            result1 = "*";
            pos++;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"*\"");
            }
          }
          if (result1 !== null) {
            pos2 = pos;
            reportFailures++;
            if (input.charCodeAt(pos) === 42) {
              result2 = "*";
              pos++;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\"*\"");
              }
            }
            if (result2 === null) {
              result2 = parse_w();
            }
            reportFailures--;
            if (result2 === null) {
              result2 = "";
            } else {
              result2 = null;
              pos = pos2;
            }
            if (result2 !== null) {
              result4 = parse_asteriskSpanSpan();
              if (result4 !== null) {
                result3 = [];
                while (result4 !== null) {
                  result3.push(result4);
                  result4 = parse_asteriskSpanSpan();
                }
              } else {
                result3 = null;
              }
              if (result3 !== null) {
                if (input.charCodeAt(pos) === 42) {
                  result4 = "*";
                  pos++;
                } else {
                  result4 = null;
                  if (reportFailures === 0) {
                    matchFailed("\"*\"");
                  }
                }
                if (result4 !== null) {
                  result5 = (function(offset, spans) {
                  			var lastSpan = spans[spans.length - 1];
                  			if (typeof lastSpan !== 'string') {
                  				return true;
                  			}
                  			return !(/\s/.test(lastSpan[lastSpan.length - 1]));
                  		})(pos, result3) ? "" : null;
                  if (result5 !== null) {
                    result0 = [result0, result1, result2, result3, result4, result5];
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, spans) {
        			popStack('em');
        			return {
        				type: 'em',
        				spans: condenseSpans(spans)
        			};
        		})(pos0, result0[3]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        if (result0 === null) {
          pos0 = pos;
          result0 = (function(offset) { popStack('em'); })(pos) ? "" : null;
          if (result0 !== null) {
            result1 = parse_FailMatch();
            if (result1 !== null) {
              result0 = [result0, result1];
            } else {
              result0 = null;
              pos = pos0;
            }
          } else {
            result0 = null;
            pos = pos0;
          }
        }
        return result0;
      }
      
      function parse_asteriskSpanSpan() {
        var result0, result1;
        var pos0, pos1, pos2;
        
        result0 = parse_linkSpan();
        if (result0 === null) {
          result0 = parse_lineBreakSpan();
          if (result0 === null) {
            result0 = parse_escapedLiteral();
            if (result0 === null) {
              result0 = parse_hardWrapChar();
              if (result0 === null) {
                result0 = parse_doubleAsteriskSpan();
                if (result0 === null) {
                  pos0 = pos;
                  pos1 = pos;
                  pos2 = pos;
                  reportFailures++;
                  if (/^[*]/.test(input.charAt(pos))) {
                    result0 = input.charAt(pos);
                    pos++;
                  } else {
                    result0 = null;
                    if (reportFailures === 0) {
                      matchFailed("[*]");
                    }
                  }
                  reportFailures--;
                  if (result0 === null) {
                    result0 = "";
                  } else {
                    result0 = null;
                    pos = pos2;
                  }
                  if (result0 !== null) {
                    if (input.length > pos) {
                      result1 = input.charAt(pos);
                      pos++;
                    } else {
                      result1 = null;
                      if (reportFailures === 0) {
                        matchFailed("any character");
                      }
                    }
                    if (result1 !== null) {
                      result0 = [result0, result1];
                    } else {
                      result0 = null;
                      pos = pos1;
                    }
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                  if (result0 !== null) {
                    result0 = (function(offset, s) { return s; })(pos0, result0[1]);
                  }
                  if (result0 === null) {
                    pos = pos0;
                  }
                }
              }
            }
          }
        }
        return result0;
      }
      
      function parse_underscoreSpan() {
        var result0, result1, result2, result3, result4;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        result0 = (function(offset) { return tryPushSpanStack('em'); })(pos) ? "" : null;
        if (result0 !== null) {
          if (input.charCodeAt(pos) === 95) {
